Revision history for perl distribution Convos

0.99_24 Not Released
 - Can send/receive any IRC message

0.99_23 2017-01-13T23:05:39+0100
 - Fix adding notifications in frontend
 - Fix saving userinfo in connection URL
 - Will close dropdown when clicking outside of the dropdown
 - Will ask for password if channel has mode +k
 - Allow sending and receiving any IRC message

0.99_22 2017-01-10T23:32:19+0100
 - Fix use of CONVOS_ORGANIZATION_URL #307
 - Fix unread count should not be increased on join/part/quit/... messages
 - Fix going from "disconnected" to "reconnect" on connection save
 - Add connection state selector to connection editor
 - Change "Profile" to open in main dialog area
 - Change "Help" to open in main dialog area
 - Compatible with Mojolicious 7.15
 - Tweaking colors

0.99_21 2017-01-08T14:41:21+0100
 - Fix race condition when creating the websocket connection
 - Fix setting main dialog location on initial load
 - Fix not showing unread count for active channel
 - Fix sending "/names" on join #303
 - Fix parsing "/names" response #308
 - Add support for CONVOS_ORGANIZATION_URL #307
 - Add "get_user" websocket method

0.99_20 2016-12-29T21:00:43+0100
 - Fix will not reconnect without host/port change
 - Add "close" icon to main menu conversations

0.99_19 2016-12-06T14:43:43+0100
 - Fix loading message log after events have been received in background

0.99_18 2016-12-04T20:39:43+0100
 - Fix IRC username cannot contain special characters #296
 - Fix parsing IRC user modes dynamically #287
 - Fix "Goto anything" sorts by dialog name length
 - Fix queuing connections after connection errors
 - Fix API URL when mounting Convos inside on non-root reverse proxy config
 - Fix handling of new private messages #298
 - Add EXPERIMENTAL sort by last-read/activity
 - Add Dockerfile
 - Add "disable expanding links" setting in profile
 - Server messages can be read in frontend
 - Server settings can be edited in the "info" sidebar
