@@ -72,24 +72,6 @@ sub remove {
   );
 }
 
-sub rooms {
-  my $self = shift->openapi->valid_input or return;
-  my $user = $self->backend->user        or return $self->unauthorized;
-  my $connection = $user->get_connection($self->stash('connection_id'));
-
-  unless ($connection) {
-    return $self->render(openapi => E('Connection not found.'), status => 404);
-  }
-
-  $self->delay(
-    sub { $connection->rooms(shift->begin) },
-    sub {
-      my ($delay, $err, $rooms) = @_;
-      $self->render(openapi => {rooms => $rooms});
-    },
-  );
-}
-
 sub update {
   my $self = shift->openapi->valid_input or return;
   my $user = $self->backend->user        or return $self->unauthorized;
@@ -191,10 +173,6 @@ See L<Convos::Manual::API/listConnections>.
 =head2 remove
 
 See L<Convos::Manual::API/removeConnection>.
-
-=head2 rooms
-
-See L<Convos::Manual::API/roomsForConnection>.
 
 =head2 update
 
