@@ -173,41 +173,6 @@
         }
       }
     },
-    "/connection/{connection_id}/rooms": {
-      "get": {
-        "tags": [ "dialog" ],
-        "summary": "Get a list of all available chat rooms.",
-        "operationId": "rooms",
-        "x-mojo-to": "connection#rooms",
-        "parameters": [
-          { "$ref": "#/parameters/connection_id" }
-        ],
-        "responses": {
-          "200": {
-            "description": "List of rooms.",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "rooms": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "name": { "type": "string", "description": "Name of the room or person" },
-                      "topic": { "type": "string", "description": "The subjec/topic for this room" }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "Internal server error.",
-            "schema": { "$ref": "#/definitions/Error" }
-          }
-        }
-      }
-    },
     "/connection/{connection_id}/dialog/{dialog_id}/last-read": {
       "post": {
         "tags": [ "dialog" ],
