@@ -1,7 +1,8 @@
 Revision history for perl distribution Convos
 
 0.99_24 Not Released
- - Can send/receive any IRC message
+ - Can send/receive any IRC message #317
+ - Removed "roomsForConnection"
 
 0.99_23 2017-01-13T23:05:39+0100
  - Fix adding notifications in frontend
